# ceilometer-powervm

./: .gitignore  .gitreview  .stestr.conf  .zuul.yaml  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ceilometer_powervm/compute/virt/powervm/: i18n.py  inspector.py
ceilometer_powervm/locale/: ceilometer-powervm.pot
ceilometer_powervm/locale/de/: ceilometer-powervm.po
ceilometer_powervm/locale/es/: ceilometer-powervm.po
ceilometer_powervm/locale/fr/: ceilometer-powervm.po
ceilometer_powervm/locale/it/: ceilometer-powervm.po
ceilometer_powervm/locale/ja/: ceilometer-powervm.po
ceilometer_powervm/locale/ko/: ceilometer-powervm.po
ceilometer_powervm/locale/pt-BR/: ceilometer-powervm.po
ceilometer_powervm/locale/ru/: ceilometer-powervm.po
ceilometer_powervm/locale/zh-Hans/: ceilometer-powervm.po
ceilometer_powervm/locale/zh-Hant/: ceilometer-powervm.po
ceilometer_powervm/tests/compute/virt/powervm/: test_inspector.py
devstack/: README.rst
doc/source/: conf.py
doc/source/devref/: development_environment.rst  testing.rst
