[metadata]
name = ceilometer-powervm
summary = PowerVM Ceilometer Inspector for OpenStack Ceilometer.
description-file = README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://ceilometer-powervm.readthedocs.io/en/latest
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[entry_points]
ceilometer.compute.virt =
    powervm = ceilometer_powervm.compute.virt.powervm.inspector:PowerVMInspector

[files]
packages = ceilometer_powervm

[compile_catalog]
directory = ceilometer_powervm/locale
domain = ceilometer-powervm

[init_catalog]
domain = ceilometer-powervm
output_dir = ceilometer_powervm/locale
input_file = ceilometer_powervm/locale/ceilometer-powervm.pot

[update_catalog]
domain = ceilometer-powervm
output_dir = ceilometer_powervm/locale
input_file = ceilometer_powervm/locale/ceilometer-powervm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ceilometer_powervm/locale/ceilometer-powervm.pot
